# Datasets

./: .gitattributes  README.md
.github/workflows/: avgpe-build.yaml  combined-build.yaml  datasets-github-pages.yaml  macrotrends-build.yaml  readme-table.yaml  stocks-combined-update.yaml  stocks-data-process.yaml  stocks-eps-weekly.yaml  stocks-history.yaml  stocks-ohlcv-daily.yaml  stocks-peratio-weekly.yaml
data/stocks/AAPL/: avgpe_10.json  avgpe_5.json  combined.csv  eps.csv  ohlcv.csv
data/stocks/ADBE/: avgpe_10.json  avgpe_5.json  combined.csv  eps.csv  ohlcv.csv
data/stocks/CRM/: avgpe_10.json  avgpe_5.json  combined.csv  eps.csv  ohlcv.csv
data/stocks/GOOG/: avgpe_10.json  avgpe_5.json  combined.csv  eps.csv  ohlcv.csv
data/stocks/INTU/: avgpe_10.json  avgpe_5.json  combined.csv  eps.csv  ohlcv.csv
data/stocks/LRCX/: avgpe_10.json  avgpe_5.json  combined.csv  eps.csv  ohlcv.csv
data/stocks/META/: avgpe_10.json  avgpe_5.json  combined.csv  eps.csv  ohlcv.csv
data/stocks/MSFT/: avgpe_10.json  avgpe_5.json  combined.csv  eps.csv  ohlcv.csv
data/stocks/NFLX/: avgpe_10.json  avgpe_5.json  combined.csv  eps.csv  ohlcv.csv
data/stocks/NVDA/: avgpe_10.json  avgpe_5.json  combined.csv  eps.csv  ohlcv.csv
data/stocks/RMD/: avgpe_10.json  avgpe_5.json  combined.csv  eps.csv  ohlcv.csv
scripts/python/yf/: pyproject.toml
scripts/python/yf/lib/: __init__.py  csvfmt.py  main.py  ohlcv_fetch.py  ticker_year.py
scripts/rust/avgpe/: .env.example  Cargo.toml  README.md  shape.json
scripts/rust/avgpe/src/: cpi.rs  cut.rs  main.rs  stats.rs  validate.rs
(+689 files in other folders)
