[package]
name = "avgpe"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dotenvy    = "0.15"
rayon      = "1"
reqwest    = { version = "0.12", features = ["blocking", "json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
